2009-06-30  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/data/transitions.ini: Made task launcher initial transitions
	  1/3rd slower.

	Fixes: NB#106433 - Detect XVideo Overlays and don't blur if so

	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h: added _OMAP_VIDEO_OVERLAY atom
	* src/util/hd-util.c
	* src/util/hd-util.h: added hd_util_client_has_video_overlay	
	* src/tidy/tidy-blur-group.c
	* src/tidy/tidy-blur-group.h: added tidy_blur_group_set_chequer to
	  allow us to put a black chequer pattern over everything in the 
	  blur group.
	* src/home/hd-render-manager.c: If we are about to blur a window,
	  check that what we are blurring doesn't have a video overlay. If
	  so, use tidy_blur_group_set_chequer to use a chequer pattern for
	  dimming.

2009-06-30  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#125453 - Unable to add more than 3 shortcuts on a row
	Fixes: NB#124885 - Merged contact's  shortcut avatar is not
	proper(i.e. overlapped)
	Fixes: NB#112246 - Hildon status menu disappearing while sharing
	images using BT

	* src/home/hd-home-view-layout.c (PADDING): Decrease the padding
	slightly so 4 bookmark shotcuts fit a row.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Do not close status
	menu if an override-redirect window is mapped.

	* debian/changelog: update.

2009-06-30  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Increased minimum loadavg for prestarting to 1.0.
	Fixes: NB#125697

	* src/launcher/hd-app-mgr.c:

2009-06-30  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Moved loading_image to blur_front so that power key menu appears on top.
	Fixes: NB#123990

	* src/home/hd-render-manager.c:

2009-06-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#121704 ss application menu displayed on top of "select connection "
		  dialog then disappeared after sometime

	Delete GtkMenu:s as well as HildonAppMenu:s.

	* src/mb/hd-atoms.h
	* src/mb/hd-atoms.c: